# certificados

./: .gitignore
backend/: .env  .env.development  package-lock.json  package.json  server.js
backend/libs/: storage.js
backend/network/: api.js
backend/views_email/: confirmacionCertificado.handlebars
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: README.md  default.vue  nuxt.config.js  package-lock.json  package.json
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/services/: api.js
